# tg-ws-proxy-server

./: .gitignore  Dockerfile  Dockerfile.redsocks  LICENSE  README.md  deploy.sh  docker-compose.yml  iptables-tg.sh  pyproject.toml  redsocks.conf  test_connectivity.sh  tg-ws-proxy-iptables.service
proxy/: balancer.py  bridge.py  config.py  raw_websocket.py  stats.py  tg_ws_proxy.py  utils.py
